<resources>
    <string name="app_name">Physician Satisfaction</string>
    <string name="start_survey">Start Survey</string>
    <string name="welcome_message">Welcome to the Physician Satisfaction App.  Please take time once a day to monitor your job satisfaction.  You will need to follow the prompts to complete the survey.  The survey should take less than 2 minutes during your day.</string>
    <string name="value_input_message">We value your input.  Please, click on the bottom of the screen to begin your survey.</string>
    <string name="start_survey_message">We value your input.  Please, click on the bottom of the screen to begin your survey.</string>
    <string name="how_rate">How would you rate your experience?  1 being the worst and 10 the best.</string>

    <string name="what_issues">What issues contributed to job dissatisfaction? Touch anywhere outside of the text area to dismiss the keypad once you have entered your answer.</string>
    <string name="limit_response">Please limit responses to 6 to 20 words</string>

    <string name="hospital_operations">Hospital Operations</string>
    <string name="satisfaction">Satisfaction</string>
    <string name="response">Response</string>
    <string name="why_do_you_feel">Why do you feel this way?</string>
    <string name="survey_completed">Survey Completed</string>

    <string name="submit_survey">Submit Survey</string>

    <!-- Why Feeling This Way -->
    <string name="hospital_administration">Hospital Administration</string>
    <string name="staff_interactions">Staff Interactions</string>
    <string name="communications">Communications</string>
    <string name="documentation">Documentation</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="other">Other</string>

    <string name="next">Next</string>

    <string name="site_code">SITECODE</string>
    <string name="site_code_title">Site Code</string>
    <string name="enter_site_code">Enter Site Code</string>

    <!-- Satisfaction options -->
    <string-array name="rating">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="accept">Accept</string>
    <string name="eula_string">Copyrights:
    \nCopyright 2016 Satterfield Physician Satisfaction.  All Rights Reserved.
    </string>
</resources>
